# trusted-lists

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  applebot.xml  braintree.xml  circleci-v4.xml  circleci.xml  cloudflare-v6.xml  firewalld-ipset-applebot-v4.spec  firewalld-ipset-applebot.spec  firewalld-ipset-bingbot-v4.spec  firewalld-ipset-bingbot.spec  firewalld-ipset-braintree-v4.spec  firewalld-ipset-braintree.spec  firewalld-ipset-circleci-v4.spec  firewalld-ipset-circleci.spec  firewalld-ipset-cloudflare-v4.spec  firewalld-ipset-cloudflare-v6.spec  firewalld-ipset-googlebot-v4.spec  firewalld-ipset-googlebot-v6.spec  firewalld-ipset-googlebot.spec  firewalld-ipset-jetpack-v4.spec  firewalld-ipset-jetpack.spec  firewalld-ipset-metabase.spec  firewalld-ipset-openai-chatgpt-user-v4.spec  firewalld-ipset-openai-chatgpt-user.spec  firewalld-ipset-openai-gptbot-v4.spec  firewalld-ipset-openai-gptbot.spec  firewalld-ipset-openai-searchbot-v4.spec  firewalld-ipset-openai-searchbot.spec  firewalld-ipset-paypal-v4.spec  firewalld-ipset-paypal.spec  firewalld-ipset-stripe-v4.spec  firewalld-ipset-stripe.spec  firewalld-ipset-twitter-v4.spec  firewalld-ipset-twitter.spec  firewalld-ipset-wordfence.spec  firewalld-ipset-wp-rocket-v4.spec  firewalld-ipset-wp-rocket-v6.spec  (+19 more)
.circleci/: config.yml
output/: firewalld-ipset-braintree-20241015-3.el9.noarch.rpm  firewalld-ipset-braintree-20241015-3.el9.src.rpm  firewalld-ipset-braintree-20250809-3.el9.noarch.rpm  firewalld-ipset-braintree-20250809-3.el9.src.rpm  firewalld-ipset-circleci-20250808-3.el9.noarch.rpm  (+25 more)
(+21 files in other folders)
